création d'un lanceur (il y a un problème dans les poms, du coup les dépendances ont été reportées, normalement ce n'est pa nécessaire)

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>commun</module>
 		<module>diceforge</module>
         <module>joueur</module>
+        <module>lanceur</module>
 	</modules>
 	
 	<packaging>pom</packaging>
