Plusieurs problèmes ont été réglé : - Dans Lanceur, une option pour forcer la création d'une nouvelle socket est utilisée sinon, les deux joueurs avaient la même socketIO - dans Identité, equals avait "return false" - dans Serveur, pour simplifier, la HashMap a été remplacé par une ArrayList - dans GestionnaireDeTour, un tour est géré (décompte de ceux qui ont joué, version simple, sans vérification) - les tests ont été mis à jour (ils restent cependant insuffisants)

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>PhilippeRG</groupId> <!-- à changer par le nom du groupe -->
-    <artifactId>DiceForge</artifactId> <!-- et le nom du projet -->
+    <artifactId>DiceForgeGame</artifactId> <!-- et le nom du projet -->
     <version>1.0</version>
 
 	<modules>
@@ -16,7 +16,7 @@
 	</modules>
 	
 	<packaging>pom</packaging>
-	
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- éventuellement à changer : encodage de vos fichiers -->
         <compiler.source>11</compiler.source> <!-- éventuellement à changer : version de java (sdk) utilisée pour le développement -->
