--- a/joueur/pom.xml
+++ b/joueur/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>PhilippeRG</groupId> <!-- à changer par le nom du groupe -->
-		<artifactId>DiceForge</artifactId> <!-- et le nom du projet -->
+		<artifactId>DiceForgeGame</artifactId> <!-- et le nom du projet -->
 		<version>1.0</version>
 	</parent>
 	
