--- a/lanceur/pom.xml
+++ b/lanceur/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>PhilippeRG</groupId> <!-- à changer par le nom du groupe -->
-		<artifactId>DiceForge</artifactId> <!-- et le nom du projet -->
+		<artifactId>DiceForgeGame</artifactId> <!-- et le nom du projet -->
 		<version>1.0</version>
 	</parent>
 	
@@ -78,8 +78,9 @@
         </dependency>
 
 
+        <!-- @DONE DEPENDENCE NON TRANSITIVES :  renomage de artifactId (conflit entre DiceForge et nom du module DiceForge -->
 
-        <!-- JSON -->
+        <!-- JSON & other full dependencies
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -87,7 +88,6 @@
         </dependency>
 
 
-        <!-- serveur -->
         <dependency>
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
@@ -105,7 +105,6 @@
         </dependency>
 
 
-        <!-- client -->
         <dependency>
             <groupId>io.socket</groupId>
             <artifactId>socket.io-client</artifactId>
@@ -118,6 +117,8 @@
             <artifactId>commun</artifactId>
             <version>1.0</version>
         </dependency>
+
+        -->
 
     </dependencies>
 
