--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,5 @@ jobs:
         java-version: 17
     - name: Build with Maven
       run: mvn -B install --file pom.xml
+    - name : Exec with Maven
+      mvn exec:java@michelvsphil -pl lanceur
