--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B install --file pom.xml
     - name : Exec with Maven
-      mvn exec:java@michelvsphil -pl lanceur
+      run: mvn exec:java@michelvsphil -pl lanceur
