--- a/joueur/pom.xml
+++ b/joueur/pom.xml
@@ -37,7 +37,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>diceforge.client.Client
+                    <mainClass>diceforge.client.ClientSocketIO
                     </mainClass>  <!-- à changer : classe avec point d'entrée pour votre projet -->
                     <!-- argument de la commande java (en plus du nom de la classe et du classpath -->
 
