--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,11 @@
     <dependencies>
 
 
-
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
 
 
 
